// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerComponent generating years should max at current year when tracked is earlier 1`] = `
[
  {
    "number": 2022,
    "selected": false,
  },
  {
    "number": 2021,
    "selected": false,
  },
  {
    "number": 2020,
    "selected": false,
  },
  {
    "number": 2019,
    "selected": false,
  },
  {
    "number": 2018,
    "selected": false,
  },
  {
    "number": 2017,
    "selected": false,
  },
  {
    "number": 2016,
    "selected": false,
  },
  {
    "number": 2015,
    "selected": true,
  },
  {
    "number": 2014,
    "selected": false,
  },
  {
    "number": 2013,
    "selected": false,
  },
  {
    "number": 2012,
    "selected": false,
  },
  {
    "number": 2011,
    "selected": false,
  },
  {
    "number": 2010,
    "selected": false,
  },
  {
    "number": 2009,
    "selected": false,
  },
  {
    "number": 2008,
    "selected": false,
  },
  {
    "number": 2007,
    "selected": false,
  },
  {
    "number": 2006,
    "selected": false,
  },
  {
    "number": 2005,
    "selected": false,
  },
  {
    "number": 2004,
    "selected": false,
  },
  {
    "number": 2003,
    "selected": false,
  },
  {
    "number": 2002,
    "selected": false,
  },
  {
    "number": 2001,
    "selected": false,
  },
  {
    "number": 2000,
    "selected": false,
  },
]
`;

exports[`DatePickerComponent generating years should max at tracked year when tracked is later 1`] = `
[
  {
    "number": 2040,
    "selected": true,
  },
  {
    "number": 2039,
    "selected": false,
  },
  {
    "number": 2038,
    "selected": false,
  },
  {
    "number": 2037,
    "selected": false,
  },
  {
    "number": 2036,
    "selected": false,
  },
  {
    "number": 2035,
    "selected": false,
  },
  {
    "number": 2034,
    "selected": false,
  },
  {
    "number": 2033,
    "selected": false,
  },
  {
    "number": 2032,
    "selected": false,
  },
  {
    "number": 2031,
    "selected": false,
  },
  {
    "number": 2030,
    "selected": false,
  },
  {
    "number": 2029,
    "selected": false,
  },
  {
    "number": 2028,
    "selected": false,
  },
  {
    "number": 2027,
    "selected": false,
  },
  {
    "number": 2026,
    "selected": false,
  },
  {
    "number": 2025,
    "selected": false,
  },
  {
    "number": 2024,
    "selected": false,
  },
  {
    "number": 2023,
    "selected": false,
  },
  {
    "number": 2022,
    "selected": false,
  },
  {
    "number": 2021,
    "selected": false,
  },
  {
    "number": 2020,
    "selected": false,
  },
  {
    "number": 2019,
    "selected": false,
  },
  {
    "number": 2018,
    "selected": false,
  },
  {
    "number": 2017,
    "selected": false,
  },
  {
    "number": 2016,
    "selected": false,
  },
  {
    "number": 2015,
    "selected": false,
  },
  {
    "number": 2014,
    "selected": false,
  },
  {
    "number": 2013,
    "selected": false,
  },
  {
    "number": 2012,
    "selected": false,
  },
  {
    "number": 2011,
    "selected": false,
  },
  {
    "number": 2010,
    "selected": false,
  },
  {
    "number": 2009,
    "selected": false,
  },
  {
    "number": 2008,
    "selected": false,
  },
  {
    "number": 2007,
    "selected": false,
  },
  {
    "number": 2006,
    "selected": false,
  },
  {
    "number": 2005,
    "selected": false,
  },
  {
    "number": 2004,
    "selected": false,
  },
  {
    "number": 2003,
    "selected": false,
  },
  {
    "number": 2002,
    "selected": false,
  },
  {
    "number": 2001,
    "selected": false,
  },
  {
    "number": 2000,
    "selected": false,
  },
]
`;

exports[`DatePickerComponent generating years should min at 2000 year when tracked is later 1`] = `
[
  {
    "number": 2022,
    "selected": false,
  },
  {
    "number": 2021,
    "selected": false,
  },
  {
    "number": 2020,
    "selected": false,
  },
  {
    "number": 2019,
    "selected": false,
  },
  {
    "number": 2018,
    "selected": false,
  },
  {
    "number": 2017,
    "selected": false,
  },
  {
    "number": 2016,
    "selected": false,
  },
  {
    "number": 2015,
    "selected": false,
  },
  {
    "number": 2014,
    "selected": false,
  },
  {
    "number": 2013,
    "selected": false,
  },
  {
    "number": 2012,
    "selected": false,
  },
  {
    "number": 2011,
    "selected": false,
  },
  {
    "number": 2010,
    "selected": false,
  },
  {
    "number": 2009,
    "selected": false,
  },
  {
    "number": 2008,
    "selected": false,
  },
  {
    "number": 2007,
    "selected": false,
  },
  {
    "number": 2006,
    "selected": false,
  },
  {
    "number": 2005,
    "selected": false,
  },
  {
    "number": 2004,
    "selected": false,
  },
  {
    "number": 2003,
    "selected": false,
  },
  {
    "number": 2002,
    "selected": true,
  },
  {
    "number": 2001,
    "selected": false,
  },
  {
    "number": 2000,
    "selected": false,
  },
]
`;

exports[`DatePickerComponent generating years should min at tracked year when tracked is earlier 1`] = `
[
  {
    "number": 2022,
    "selected": false,
  },
  {
    "number": 2021,
    "selected": false,
  },
  {
    "number": 2020,
    "selected": false,
  },
  {
    "number": 2019,
    "selected": false,
  },
  {
    "number": 2018,
    "selected": false,
  },
  {
    "number": 2017,
    "selected": false,
  },
  {
    "number": 2016,
    "selected": false,
  },
  {
    "number": 2015,
    "selected": false,
  },
  {
    "number": 2014,
    "selected": false,
  },
  {
    "number": 2013,
    "selected": false,
  },
  {
    "number": 2012,
    "selected": false,
  },
  {
    "number": 2011,
    "selected": false,
  },
  {
    "number": 2010,
    "selected": false,
  },
  {
    "number": 2009,
    "selected": false,
  },
  {
    "number": 2008,
    "selected": false,
  },
  {
    "number": 2007,
    "selected": false,
  },
  {
    "number": 2006,
    "selected": false,
  },
  {
    "number": 2005,
    "selected": false,
  },
  {
    "number": 2004,
    "selected": false,
  },
  {
    "number": 2003,
    "selected": false,
  },
  {
    "number": 2002,
    "selected": false,
  },
  {
    "number": 2001,
    "selected": false,
  },
  {
    "number": 2000,
    "selected": false,
  },
  {
    "number": 1999,
    "selected": false,
  },
  {
    "number": 1998,
    "selected": true,
  },
]
`;

exports[`DatePickerComponent should generate months 1`] = `
[
  {
    "name": "January",
    "selected": false,
  },
  {
    "name": "February",
    "selected": false,
  },
  {
    "name": "March",
    "selected": false,
  },
  {
    "name": "April",
    "selected": false,
  },
  {
    "name": "May",
    "selected": false,
  },
  {
    "name": "June",
    "selected": false,
  },
  {
    "name": "July",
    "selected": true,
  },
  {
    "name": "August",
    "selected": false,
  },
  {
    "name": "September",
    "selected": false,
  },
  {
    "name": "October",
    "selected": false,
  },
  {
    "name": "November",
    "selected": false,
  },
  {
    "name": "December",
    "selected": false,
  },
]
`;

exports[`DatePickerComponent should generate weeks 1`] = `
[
  [
    {
      "date": 2022-06-27T00:00:00.000Z,
      "number": 26,
      "otherMonth": true,
      "selected": false,
    },
    {
      "date": 2022-06-28T00:00:00.000Z,
      "number": 27,
      "otherMonth": true,
      "selected": false,
    },
    {
      "date": 2022-06-29T00:00:00.000Z,
      "number": 28,
      "otherMonth": true,
      "selected": false,
    },
    {
      "date": 2022-06-30T00:00:00.000Z,
      "number": 29,
      "otherMonth": true,
      "selected": false,
    },
    {
      "date": 2022-07-01T00:00:00.000Z,
      "number": 30,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-02T00:00:00.000Z,
      "number": 1,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-03T00:00:00.000Z,
      "number": 2,
      "otherMonth": false,
      "selected": false,
    },
  ],
  [
    {
      "date": 2022-07-04T00:00:00.000Z,
      "number": 3,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-05T00:00:00.000Z,
      "number": 4,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-06T00:00:00.000Z,
      "number": 5,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-07T00:00:00.000Z,
      "number": 6,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-08T00:00:00.000Z,
      "number": 7,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-09T00:00:00.000Z,
      "number": 8,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-10T00:00:00.000Z,
      "number": 9,
      "otherMonth": false,
      "selected": false,
    },
  ],
  [
    {
      "date": 2022-07-11T00:00:00.000Z,
      "number": 10,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-12T00:00:00.000Z,
      "number": 11,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-13T00:00:00.000Z,
      "number": 12,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-14T00:00:00.000Z,
      "number": 13,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-15T00:00:00.000Z,
      "number": 14,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-16T00:00:00.000Z,
      "number": 15,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-17T00:00:00.000Z,
      "number": 16,
      "otherMonth": false,
      "selected": false,
    },
  ],
  [
    {
      "date": 2022-07-18T00:00:00.000Z,
      "number": 17,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-19T00:00:00.000Z,
      "number": 18,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-20T00:00:00.000Z,
      "number": 19,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-21T00:00:00.000Z,
      "number": 20,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-22T00:00:00.000Z,
      "number": 21,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-23T00:00:00.000Z,
      "number": 22,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-24T00:00:00.000Z,
      "number": 23,
      "otherMonth": false,
      "selected": false,
    },
  ],
  [
    {
      "date": 2022-07-25T00:00:00.000Z,
      "number": 24,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-26T00:00:00.000Z,
      "number": 25,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-27T00:00:00.000Z,
      "number": 26,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-28T00:00:00.000Z,
      "number": 27,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-29T00:00:00.000Z,
      "number": 28,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-30T00:00:00.000Z,
      "number": 29,
      "otherMonth": false,
      "selected": false,
    },
    {
      "date": 2022-07-31T00:00:00.000Z,
      "number": 30,
      "otherMonth": true,
      "selected": false,
    },
  ],
  [
    {
      "date": 2022-08-01T00:00:00.000Z,
      "number": 31,
      "otherMonth": true,
      "selected": false,
    },
    {
      "date": 2022-08-02T00:00:00.000Z,
      "number": 1,
      "otherMonth": true,
      "selected": false,
    },
    {
      "date": 2022-08-03T00:00:00.000Z,
      "number": 2,
      "otherMonth": true,
      "selected": false,
    },
    {
      "date": 2022-08-04T00:00:00.000Z,
      "number": 3,
      "otherMonth": true,
      "selected": false,
    },
    {
      "date": 2022-08-05T00:00:00.000Z,
      "number": 4,
      "otherMonth": true,
      "selected": false,
    },
  ],
]
`;
